samples/_failures_safe/1761550998_3f7439_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10228808.c: In function ‘main’:
./samples/SAFE/__tmp_10228808.c:178:45: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  178 |                 if (!validate_integer_input(input
      |                                             ^~~~~
      |                                             int
./samples/SAFE/__tmp_10228808.c:178:45: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_10228808.c:178:50: error: expected ‘)’ at end of input
  178 |                 if (!validate_integer_input(input
      |                                            ~     ^
      |                                                  )
./samples/SAFE/__tmp_10228808.c:178:22: error: too few arguments to function ‘validate_integer_input’
  178 |                 if (!validate_integer_input(input
      |                      ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_10228808.c:55:5: note: declared here
   55 | int validate_integer_input(const char* input, int* value) {
      |     ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_10228808.c:178:17: error: expected declaration or statement at end of input
  178 |                 if (!validate_integer_input(input
      |                 ^~
./samples/SAFE/__tmp_10228808.c:178:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10228808.c:178:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10228808.c:178:17: error: expected declaration or statement at end of input
